--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "node ./index.mjs",
     "start": "nodemon ./index.mjs",
-    "server": "node ./index.mjs"
+    "server": "TZ=UTC+3 node ./index.mjs"
   },
   "author": "",
   "license": "ISC",
