--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,7 @@
     "history": "^5.3.0",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "numeral": "^2.0.6",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
