--- a/client/package.json
+++ b/client/package.json
@@ -47,6 +47,8 @@
     "react-hook-form": "^7.47.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.16.0",
+    "react-to-print": "^2.15.1",
+    "rrule": "^2.8.1",
     "simplebar-react": "^3.2.4",
     "validator": "^13.12.0"
   },
